File and image updates

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
     <h1>Wunderlust Travel</h1>
     <picture>
-        <source media="(max-width: 320px)" srcset="images/logo-S.png">
-        <source media="(max-width: 780px)" srcset="images/logo-M.png">
-        <source media="(max-width: 1024px)" srcset="images/logo-L.png">
-        <img src="images/logo-L.png" alt="Sun behind palm trees and ocean wave logo">
+        <source media="(max-width: 320px)" srcset="logo-S.png">
+        <source media="(max-width: 780px)" srcset="logo-M.png">
+        <source media="(max-width: 1024px)" srcset="logo-L.png">
+        <img src="logo-L.png" alt="Sun behind palm trees and ocean wave logo">
       </picture>
     <p>Let Wunderlust Travel help you plan the trip of your dreams!</p>
 
@@ -29,22 +29,22 @@
             <h3>Majorca</h3>
             <p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
             <picture>
-                <source media="(max-width: 320px)" srcset="images/majorca-waves-S.png">
-                <source media="(max-width: 780px)" srcset="images/majorca-waves-M.png">
-                <source media="(max-width: 1024px)" srcset="images/majorca-waves-L.png">
-                <img src="images/majorca-waves-L.png" alt="Ocean waves">
+                <source media="(max-width: 320px)" srcset="majorca-waves-S.png">
+                <source media="(max-width: 780px)" srcset="majorca-waves-M.png">
+                <source media="(max-width: 1024px)" srcset="majorca-waves-L.png">
+                <img src="majorca-waves-L.png" alt="Ocean waves">
             </picture>
             <picture>
-                <source media="(max-width: 320px)" srcset="images/majorca-beach-S.png">
-                <source media="(max-width: 780px)" srcset="images/majorca-beach-M.png">
-                <source media="(max-width: 1024px)" srcset="images/majorca-beach-L.png">
-                <img src="images/majorca-beach-L.png" alt="Sunny beach with water and sand">
+                <source media="(max-width: 320px)" srcset="majorca-beach-S.png">
+                <source media="(max-width: 780px)" srcset="majorca-beach-M.png">
+                <source media="(max-width: 1024px)" srcset="majorca-beach-L.png">
+                <img src="majorca-beach-L.png" alt="Sunny beach with water and sand">
             </picture>
             <picture>
-                <source media="(max-width: 320px)" srcset="images/majorca-cove-S.png">
-                <source media="(max-width: 780px)" srcset="images/majorca-cove-M.png">
-                <source media="(max-width: 1024px)" srcset="imageswunderlust/majorca-cove-L.png">
-                <img src="images/majorca-cove-L.png" alt="Cove with trees, rocks, and water on sunny day">
+                <source media="(max-width: 320px)" srcset="majorca-cove-S.png">
+                <source media="(max-width: 780px)" srcset="majorca-cove-M.png">
+                <source media="(max-width: 1024px)" srcset="majorca-cove-L.png">
+                <img src="majorca-cove-L.png" alt="Cove with trees, rocks, and water on sunny day">
             </picture>
                 <h4>Plan Your Trip</h4>
                     <h5>How to Get There</h5>
@@ -112,40 +112,40 @@
             <h2>Testinomials</h2>
                 <h3>Miranda Blake</h3>
                 <picture>
-                    <source media="(max-width: 320px)" srcset="images/miranda-blake-S.png">
-                    <source media="(max-width: 780px)" srcset="images/miranda-blake-M.png">
-                    <source media="(max-width: 1024px)" srcset="images/miranda-blake-L.png">
-                    <img src="images/miranda-blake-L.png" alt="Miranda Blake">
+                    <source media="(max-width: 320px)" srcset="miranda-blake-S.png">
+                    <source media="(max-width: 780px)" srcset="miranda-blake-M.png">
+                    <source media="(max-width: 1024px)" srcset="miranda-blake-L.png">
+                    <img src="miranda-blake-L.png" alt="Miranda Blake">
                 </picture>
                 <p>Traveling From: London, England</p>
                 <q>I traveled here for business, but my stay was extended. Now it is my home.</q>
 
                 <h3>Max Winter</h3>
                 <picture>
-                    <source media="(max-width: 320px)" srcset="images/max-winter-S.png">
-                    <source media="(max-width: 780px)" srcset="images/max-winter-M.png">
-                    <source media="(max-width: 1024px)" srcset="images/max-winter-L.png">
-                    <img src="images/max-winter-L.png" alt="Max Winter">
+                    <source media="(max-width: 320px)" srcset="max-winter-S.png">
+                    <source media="(max-width: 780px)" srcset="max-winter-M.png">
+                    <source media="(max-width: 1024px)" srcset="max-winter-L.png">
+                    <img src="max-winter-L.png" alt="Max Winter">
                 </picture>
                 <p>Traveling From: Berlin, Germany</p>
                 <q>Great escape from my reality. Beautiful sunsets, wonderful people, great beer.</q>
 
                 <h3>Inés Villegoes</h3>
                 <picture>
-                    <source media="(max-width: 320px)" srcset="images/ines-villegoes-S.png">
-                    <source media="(max-width: 780px)" srcset="images/ines-villegoes-M.png">
-                    <source media="(max-width: 1024px)" srcset="images/ines-villegoes-L.png">
-                    <img src="images/ines-villegoes-L.png" alt="Inés Villegoes">
+                    <source media="(max-width: 320px)" srcset="ines-villegoes-S.png">
+                    <source media="(max-width: 780px)" srcset="ines-villegoes-M.png">
+                    <source media="(max-width: 1024px)" srcset="ines-villegoes-L.png">
+                    <img src="ines-villegoes-L.png" alt="Inés Villegoes">
                 </picture>
                 <p>Traveling From: Barcelona, Spain</p>
                 <q>A very safe environment for all travelers.</q>
 
                 <h3>Carmen Lorenzo</h3>
                 <picture>
-                    <source media="(max-width: 320px)" srcset="images/carmen-lorenzo-S.png">
-                    <source media="(max-width: 780px)" srcset="images/carmen-lorenzo-M.png">
-                    <source media="(max-width: 1024px)" srcset="images/carmen-lorenzo-L.png">
-                    <img src="images/carmen-lorenzo-L.png" alt="Carmen Lorenzo">
+                    <source media="(max-width: 320px)" srcset="carmen-lorenzo-S.png">
+                    <source media="(max-width: 780px)" srcset="carmen-lorenzo-M.png">
+                    <source media="(max-width: 1024px)" srcset="carmen-lorenzo-L.png">
+                    <img src="carmen-lorenzo-L.png" alt="Carmen Lorenzo">
                 </picture>
                 <p>Traveling From: Madrid, Spain</p>
                 <q>Live, laugh, love-- everything you need in Majorca.</q>
