--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>Wunderlust Travel</title>
 </head>
+<header>
+    <div class="skip-link" >
+        Skip to <a href='#main'>Main Content</a>
+</header>
 <body>
     <h1>Wunderlust Travel</h1>
     <picture>
@@ -23,7 +27,7 @@
         </ul>
       </nav>
     
-    <main>
+    <main id="main">
         <section id="destinations">
         <h2>Destinations</h2>
             <h3>Majorca</h3>
@@ -108,7 +112,7 @@
                         </svg>   
                     </a>
         </section>
-        <section id="testimonials">
+        <section id="inspirations">
             <h2>Testinomials</h2>
                 <h3>Miranda Blake</h3>
                 <picture>
