--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 type="text"
                 placeholder="Enter first name"
                 required
-            />
+            /><br>
 
             <label for="lastname">Last Name</label>
             <input 
@@ -220,7 +220,7 @@
                 type="text"
                 placeholder="Enter last name"
                 required
-            />
+            /><br>
 
             <fieldset>
                 <legend>Preferred Contact Method</legend>
@@ -230,7 +230,7 @@
                 <label for="text">Text</label><br>
                 <input id="phone" type="radio" name="contact-method" value="phone">
                 <label for="phone">Phone</label>
-            </fieldset>
+            </fieldset><br>
                 
             <label for="email">Email Address</label>
             <input 
@@ -239,7 +239,7 @@
                 type="email"
                 placeholder="Enter email"
                 required
-            />
+            /><br>
 
             <label for="phone">Phone Number</label>
             <input 
@@ -248,7 +248,7 @@
                 type="tel"
                 placeholder="Enter telephone number"
                 required
-            />
+            /><br>
 
             <label for="destination">Destination</label>
             <select id="destination" name="destination" required>
@@ -260,7 +260,7 @@
                 <option value="seville">Seville</option>
                 <option value="tenerife">Tenerife</option>
                 <option value="valencia">Valencia</option>
-            </select>
+            </select><br>
 
             <label for="time">Travel Time</label>
             <select id="time" name="time" required>
